# rust_finder

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  structure.md
.github/workflows/: build.yml
assets/: icon.icns
src/: main.rs
src/actions/: copy_path.rs  mod.rs  open_directory.rs
src/filters/: file_type.rs  mod.rs  recursive_search.rs
src/gui/: events.rs  layout.rs  mod.rs
src/results/: actions_column.rs  mod.rs  table.rs
src/search/: directory_handler.rs  engine.rs  mod.rs  progress_bar.rs
src/utils/: clipboard.rs  file_helpers.rs  mod.rs
