[package]
name = "rust_finder"
version = "0.1.0"
edition = "2021"

# Añadir estos metadatos para macOS
[package.metadata.bundle]
name = "Rust Finder"
identifier = "com.natxo.rustfinder"
icon = ["assets/icon.icns"]  # Necesitarás crear un archivo .icns
version = "0.1.0"
copyright = "Copyright (c) 2024 Natxo"
category = "Utility"
short_description = "Buscador de archivos"
long_description = """
Una aplicación para buscar archivos y carpetas en tu sistema.
"""

[dependencies]
eframe = "0.29.1"
opener = "0.7.2"
clipboard = "0.5"
egui = "0.29.1"
native-dialog = "0.7.0"
walkdir = "2.3.2"
arboard = "3.4.1"
image = "0.25.2"

# Añade esta sección
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Especifica que es una aplicación Windows
[package.metadata.windows]
subsystem = "windows"

# Si estás usando una versión reciente de Rust, también puedes usar:
[[bin]]
name = "rust_finder"
windows_subsystem = "windows"

# Añadir dependencia para el empaquetado
[build-dependencies]
cargo-bundle = "0.6.0"